# ocr_app

./: docker-compose.yaml  example.py  pyproject.toml
auth_service/: Dockerfile  pyproject.toml  start_server.sh
auth_service/src/: database.py  main.py
auth_service/src/auth_service/: config.py  models.py  router.py  schemas.py  service.py
ocr_app/: main.py
src/: database.py
src/auth/: config.py  dependencies.py  router.py  service.py
src/ocr_app/: main.py
